correct gap in layout grid

--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -1,8 +1,12 @@
+@use '../../styles/utils/library';
+
 .container {
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 100px 600px auto auto;
-  gap: 10px
+  grid-template-columns: 125px repeat(11, 1fr);
+  grid-template-rows: 150px 600px auto auto;
+  gap: library.$gap;
+  background-color: library.$background-col;
+  padding-right: library.$gap;
 }
 
 .header {
@@ -11,7 +15,6 @@
 }
 
 .nav {
-    background-color: grey;
     grid-column: 1 / 3;
     grid-row: 1 / 3;
     max-width: 400px;
@@ -19,16 +22,7 @@
 
 .main {
   grid-column: 3 / 13;
-  background-color: azure;
   grid-row: 2 / 4;
-}
-
-.footer {
-  grid-column: 1 / 13;
-  display: flex;
-  justify-content: center;
-  background-color: gold;
-  grid-row: 4 / 5;
 }
 
 
