--- a/styles/utils/_library.scss
+++ b/styles/utils/_library.scss
@@ -1,4 +1,4 @@
-$background-col: #dedede !default;
+$background-col: #F4F7FE !default;
 $border-radius: 20px !default;
 
 $icon-hover: black;
